2003-01-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Fixed border case in size detection
 win32/libpqxx.mak:
  - Enabled template workaround for Microsoft's compiler
2003-01-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.h:
  - Made "no PQescapeString()" workaround in Quote() slightly more portable
2003-01-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test13.cxx:
  - Added missing <cassert> - thanks postgres@vsservices.com
2003-01-06  J.H.M. Dassen (Ray) <jdassen@debian.org>
 configure.ac:
  - More extensive searching for PostgreSQL headers and libraries.
2003-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Fixed positioning bug when walking off right edge of result set
 test/test44.cxx:
  - New
2003-01-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Rewrote positioning code.  SEEMS TO WORK NOW!
  - Added size()
 test/test27.cxx, test/test8.cxx:
  - Aligned test output
 test/test40.cxx:
  - Added test case where Cursor discovers its size spontaneously
2003-01-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, src/cachedresult.cxx:
  - Make use of Cursor's absolute positioning.  NOT FUNCTIONAL YET.
 *:
  - Updated copyright notices
2002-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test18.cxx, test/test32.cxx, test/test37.cxx, test/test41.cxx:
  - Reduced (expected, but still confusing) error output
2002-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Added absolute cursor positioning
 src/cursor.cxx:
  - Rewrote Move()/Fetch() row count logic
 test/test24.cxx:
  - Fixed year for Space Oddyssey
 test/test41.cxx:
  - Reduced overrun width being tested
 test/test43.cxx:
  - New
2002-12-23  Jeroen T. Vermeulen <jtv@xs4all.nL>
 include/pqxx/cursor.h, src/cursor.cxx, test/test42.cxx:
  - Cursor::Move() now always returns number of rows moved
 include/pqxx/*.h, src/*.cxx:
  - replaced some string arguments with const string &