@@ -1,3 +1,6 @@
+2003-01-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/util.h:
+  - Support long double type
 2003-01-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/cursor.cxx:
   - Fixed border case in size detection
